# Geofence

./: CMakeLists.txt  Main.qml  main.cpp  mapbuild.html  nmea.h  serial.cpp  serial.h
